--- a/index.html
+++ b/index.html
@@ -13,13 +13,14 @@
     <header class="header">
         <div class="logo-box">
             <img src="img/logo-white.png" alt="Logo" class="logo">
-
-
+        </div>
+        <div class="text-box">
             <h1 class="heading-primary">
                 <span class="heading-primary-main">Outdoor</span>
                 <span class="heading-primary-sub">is where life happens</span>
             </h1>
         </div>
+        
     </header>
 </body>
 </html>
