--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
                 <span class="heading-primary-main">Outdoor</span>
                 <span class="heading-primary-sub">is where life happens</span>
             </h1>
+
+            <a href="#" class="btn btn-white">Discover Lagos</a>
         </div>
         
     </header>
