--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <span class="heading-primary-sub">is where life happens</span>
             </h1>
 
-            <a href="#" class="btn btn-white">Discover Lagos</a>
+            <a href="#" class="btn btn-white btn-animated">Discover Lagos</a>
         </div>
         
     </header>
