--- a/index.html
+++ b/index.html
@@ -28,19 +28,25 @@
         <section class="section-about">
             <div class="u-center-text u-margin-bottom-big">
                 <h2 class="heading-secondary">
-                    Exciting tours for adventurous people
+                    ÈKÓ AKÉTE, ÌLU OGBÓN
                 </h2>
             </div>
             <div class="row">
                 <div class="col-1-of-2">
                     <h3 class="heading-tertiary u-margin-bottom-small">Ojuelegba - We know your story</h3>
-                    <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi facilis maxime culpa eaque ipsa sapiente, nam aliquam blanditiis dolorum vel provident iure vitae accusantium quae inventore suscipit voluptas est cupiditate?</p>
+                    <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi facilis maxime culpa eaque ipsa sapiente, nam aliquam blanditiis dolorum vel provident iure vitae.</p>
 
                     <h3 class="heading-tertiary u-margin-bottom-small">Marina - Daily 2k Pickup Zone</h3>
-                    <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis omnis esse recusandae dicta illo vero harum repellendus dignissimos, dolorem dolores laudantium tempora vel accusamus perspiciatis ea culpa inventore? Ipsa, facilis.</p>
+                    <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis omnis esse recusandae dicta illo vero harum repellendus dignissimos, dolorem dolores laudantium tempora vel accusamus.</p>
                     <a href="#" class="btn-text">Learn More &rarr;</a>
                 </div>
-                <div class="col-1-of-2">Image Composition</div>
+                <div class="col-1-of-2">
+                    <div class="composition">
+                        <img src="img/seun-kikiowo-lg-1.jpg" alt="seun kikiowo Photography 1" class="composition__photo composition__photo--p1">
+                        <img src="img/seun-kikiowo-lg-2.jpg" alt="seun kikiowo Photography 2" class="composition__photo composition__photo--p2">
+                        <img src="img/seun-kikiowo-lg-3.jpg" alt="seun kikiowo Photography 3" class="composition__photo composition__photo--p3">
+                    </div>
+                </div>
             </div>
         </section>
 
