--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>GidiTours | Explore the places and scenaries in Lagos</title>
 
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/icon-font.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -48,6 +49,53 @@
                     </div>
                 </div>
             </div>
+        </section>
+
+        <section class="section-features">
+            
+            <div class="row">
+                <div class="col-1-of-4">
+                    <div class="feature-box">
+                        <i class="feature-box__icon icon-basic-world"></i>
+                        <h3 class="heading-tertiary u-margin-bottom-small">Explore restaurants</h3>
+                        <p class="feature-box__text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio libero eveniet nihil. Sed libero quidem quis! Aut officiis optio omnis facilis!
+                        </p>
+                    </div>
+                </div>
+                
+                <div class="col-1-of-4">
+                    <div class="feature-box">
+                        <i class="feature-box__icon icon-basic-compass"></i>
+                        <h3 class="heading-tertiary u-margin-bottom-small">Explore restaurants</h3>
+                        <p class="feature-box__text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio libero eveniet nihil. Sed libero quidem quis! Aut officiis optio omnis facilis!
+                        </p>
+                    </div>
+                </div>
+
+                <div class="col-1-of-4">
+                    <div class="feature-box">
+                        <i class="feature-box__icon icon-basic-map"></i>
+                        <h3 class="heading-tertiary u-margin-bottom-small">Explore restaurants</h3>
+                        <p class="feature-box__text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio libero eveniet nihil. Sed libero quidem quis! Aut officiis optio omnis facilis!
+                        </p>
+                    </div>
+                </div>
+
+                <div class="col-1-of-4">
+                    <div class="feature-box">
+                        <i class="feature-box__icon icon-basic-heart"></i>
+                        <h3 class="heading-tertiary u-margin-bottom-small">Explore restaurants</h3>
+                        <p class="feature-box__text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio libero eveniet nihil. Sed libero quidem quis! Aut officiis optio omnis facilis!
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+
         </section>
 
 
