--- a/index.html
+++ b/index.html
@@ -98,30 +98,131 @@
         </section>
 
         <section class="section-tours">
+
             <div class="u-center-text u-margin-bottom-big">
                 <h2 class="heading-secondary">
                     ÈKÓ for SHOW!!!
                 </h2>
             </div>
+
             <div class="row">
+
                 <div class="col-1-of-3">
                     <div class="card">
                         <div class="card__side card__side--front">
                             <div class="card__picture card__picture--1">
                                 &nbsp;
                             </div>
-                            <div class="card__heading"></div>
-                            <div class="card__details"></div>
+                            <div class="card__heading">
+                                <h4> 
+                                    <span class="card__heading-span card__heading-span--1">Explore Isale Eko</span>
+                                </h4>
+                            </div>
+                            <div class="card__details">
+                                <ul>
+                                    <li>2 days tour</li>
+                                    <li>up to 10 people</li>
+                                    <li>2 Tour guides</li>
+                                    <li>Sleep in cosy hotels</li>
+                                    <li>Street OT: 7</li>
+                                </ul>
+                            </div>
                         </div>
                         <div class="card__side card__side--back card__side--back-1">
-                            BACK
+                            <div class="card__cta">
+                                <div class="card__price-box">
+                                    <p class="card__price-only">
+                                        Only
+                                    </p>
+                                    <p class="card__price-value">
+                                        ₦100,000
+                                    </p>
+                                    <a href="#" class="btn btn--white btn--animated">Book now!</a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
 
-                <div class="col-1-of-3">Col 1 of 3</div>
-                <div class="col-1-of-3">Col 1 of 3</div>
+                <div class="col-1-of-3">
+                    <div class="card">
+                        <div class="card__side card__side--front">
+                            <div class="card__picture card__picture--2">
+                                &nbsp;
+                            </div>
+                            <div class="card__heading">
+                                <h4> 
+                                    <span class="card__heading-span card__heading-span--2">Explore Ikorodu</span>
+                                </h4>
+                            </div>
+                            <div class="card__details">
+                                <ul>
+                                    <li>2 days tour</li>
+                                    <li>up to 20 people</li>
+                                    <li>4 Tour guides</li>
+                                    <li>Sleep in cosy hotels</li>
+                                    <li>Street OT: 4</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="card__side card__side--back card__side--back-2">
+                            <div class="card__cta">
+                                <div class="card__price-box">
+                                    <p class="card__price-only">
+                                        Only
+                                    </p>
+                                    <p class="card__price-value">
+                                        ₦165,000
+                                    </p>
+                                    <a href="#" class="btn btn--white btn--animated">Book now!</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-1-of-3">
+                    <div class="card">
+                        <div class="card__side card__side--front">
+                            <div class="card__picture card__picture--3">
+                                &nbsp;
+                            </div>
+                            <div class="card__heading">
+                                <h4> 
+                                    <span class="card__heading-span card__heading-span--3">Explore Badagry</span>
+                                </h4>
+                            </div>
+                            <div class="card__details">
+                                <ul>
+                                    <li>2 days tour</li>
+                                    <li>up to 30 people</li>
+                                    <li>5 Tour guides</li>
+                                    <li>Sleep in cosy hotels</li>
+                                    <li>Street OT: 3</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="card__side card__side--back card__side--back-3">
+                            <div class="card__cta">
+                                <div class="card__price-box">
+                                    <p class="card__price-only">
+                                        Only
+                                    </p>
+                                    <p class="card__price-value">
+                                        ₦115,000
+                                    </p>
+                                    <a href="#" class="btn btn--white btn--animated">Book now!</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
+
+            <div class="u-center-text u-margin-top-huge">
+                <a href="#" class="btn btn--green">Explore all tours</a>
+            </div>
+
         </section>
 
 
