--- a/index.html
+++ b/index.html
@@ -225,6 +225,52 @@
 
         </section>
 
+        <section class="section-stories">
+            <div class="bg-video">
+                <video class="bg-video__content" autoplay muted loop>
+                    <source src="img/beach-1.mp4" type="video/mp4">
+                    Your browser is not supported!
+                </video>
+            </div>
+
+            <div class="u-center-text u-margin-bottom-big">
+                <h2 class="heading-secondary">
+                    We make people genuinely happy
+                </h2>
+            </div>
+
+            <div class="row">
+                <div class="story">
+                    <figure class="story__shape">
+                        <img src="img/seun-kikiowo-min-1.jpg" alt="Touring lagos" class="story__img">
+                        <figcaption class="story__caption">Tobi Kikiowo</figcaption>
+                    </figure>
+                    <div class="story__text">
+                        <h3 class="heading-tertiary u-margin-bottom-small">I had the best week with my family</h3>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates odit doloremque aperiam recusandae modi eius veritatis eveniet? Ut nisi culpa reprehenderit, odio a eveniet repudiandae, deleniti minima, saepe iure quibusdam.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="story">
+                    <figure class="story__shape">
+                        <img src="img/seun-kikiowo-min-2.jpg" alt="Touring lagos" class="story__img">
+                        <figcaption class="story__caption">Ibidun Eugenie</figcaption>
+                    </figure>
+                    <div class="story__text">
+                        <h3 class="heading-tertiary u-margin-bottom-small">Mind blowing experience</h3>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates odit doloremque aperiam recusandae modi eius veritatis eveniet? Ut nisi culpa reprehenderit, odio a eveniet repudiandae, deleniti minima, saepe iure quibusdam.</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="u-center-text u-margin-bottom-big">
+                <a href="#" class="btn-text">Read all stories &rarr;</a>
+            </div>
+
+        </section>
+
 
 
     </main>
