--- a/index.html
+++ b/index.html
@@ -271,6 +271,31 @@
 
         </section>
 
+        <section class="section-book">
+            <div class="row">
+                <div class="book">
+                    <div class="book__form">
+                        <form action="#" class="form">
+                            <div class="u-margin-bottom-medium">
+                                <h2 class="heading-secondary">
+                                    Start booking now
+                                </h2>
+                            </div>
+
+                            <div class="form__group">
+                                <input type="text" class="form__input" id="name" placeholder="Full name" required />
+                                <label for="name" class="form__label">Full name</label><div class="form__group">
+                            </div>
+                          
+                            <div class="form__group">
+                                <input type="email" class="form__input" id="name" placeholder="Email" required />
+                                <label for="name" class="form__label">Email Address</label><div class="form__group">
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </section>
 
 
     </main>
