--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
                                     </label>
                                 </div>    
                             </div>
-                            
+
                             <div class="form__group">
                                 <button class="btn btn--green">Next Step &rarr;</button>
                             </div>
@@ -322,6 +322,29 @@
 
     </main>
 
+    <footer class="footer">
+        <div class="footer__logo-box">
+            <img src="img/logo-white.png" alt="full logo" class="footer__logo">
+        </div>
+        <div class="row">
+            <div class="col-1-of-2">
+                <div class="footer__navigation">
+                    <ul class="footer__list">
+                        <li class="footer__item"><a href="#" class="footer__link">Home</a></li>
+                        <li class="footer__item"><a href="#" class="footer__link">About</a></li>
+                        <li class="footer__item"><a href="#" class="footer__link">Career</a></li>
+                        <li class="footer__item"><a href="#" class="footer__link">Privacy Policy</a></li>
+                        <li class="footer__item"><a href="#" class="footer__link">Terms</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-1-of-2">
+                <p class="footer__copyright">
+                    Built by  <a href="https://kimonie.com" class="footer__link">Kimonie Creative</a> | Copyright &copy; by <a href="https://seunkikiowo.com" class="footer__link">Seun Kikiowo</a>. This is a portfolio project, the website is design strictly with HTML5 &amp; CSS, we also leveraged the power of SASS in implementing this portfolio.
+                </p>
+            </div>
+        </div>
+    </footer>
 
 
 
