Popup with CSS and table implementation

--- a/index.html
+++ b/index.html
@@ -368,7 +368,24 @@
         </div>
     </footer>
 
-
+    <div class="popup">
+        <div class="popup__content">
+            <div class="popup__left">
+                <img src="img/seun-kikiowo-lg-1.jpg" alt="Tour Photo" class="popup__img">
+                <img src="img/seun-kikiowo-lg-2.jpg" alt="Tour Photo" class="popup__img">
+            </div>
+            <div class="popup__right">
+                <h2 class="heading-secondary u-margin-bottom-small">Start booking now</h2>
+                <h3 class="heading-tertiary u-margin-bottom-small">Important &ndash; Read terms, God no go shame us</h3>
+                <p class="popup__text">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Id libero harum qui itaque? Dolor tempore, error sapiente inventore nisi ea cumque ipsum ab deleniti vitae aut laudantium ullam alias quaerat.
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Non necessitatibus nesciunt vel, voluptates, quisquam, in officiis assumenda sed dolorum expedita temporibus iste tempora dolore ex. Quis dolorum doloremque temporibus? Deleniti!
+                </p>
+                <a href="#" class="btn btn--green">Book now</a>
+            </div>
+            
+        </div>
+    </div>
 
 
 
