--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
         </section>
 
-        <section class="section-tours">
+        <section class="section-tours" id="section-tours">
 
             <div class="u-center-text u-margin-bottom-big">
                 <h2 class="heading-secondary">
@@ -159,7 +159,7 @@
                                     <p class="card__price-value">
                                         ₦100,000
                                     </p>
-                                    <a href="#" class="btn btn--white btn--animated">Book now!</a>
+                                    <a href="#popup" class="btn btn--white btn--animated">Book now!</a>
                                 </div>
                             </div>
                         </div>
@@ -196,7 +196,7 @@
                                     <p class="card__price-value">
                                         ₦165,000
                                     </p>
-                                    <a href="#" class="btn btn--white btn--animated">Book now!</a>
+                                    <a href="#popup" class="btn btn--white btn--animated">Book now!</a>
                                 </div>
                             </div>
                         </div>
@@ -233,7 +233,7 @@
                                     <p class="card__price-value">
                                         ₦115,000
                                     </p>
-                                    <a href="#" class="btn btn--white btn--animated">Book now!</a>
+                                    <a href="#popup" class="btn btn--white btn--animated">Book now!</a>
                                 </div>
                             </div>
                         </div>
@@ -368,13 +368,14 @@
         </div>
     </footer>
 
-    <div class="popup">
+    <div class="popup" id="popup">
         <div class="popup__content">
             <div class="popup__left">
                 <img src="img/seun-kikiowo-lg-1.jpg" alt="Tour Photo" class="popup__img">
                 <img src="img/seun-kikiowo-lg-2.jpg" alt="Tour Photo" class="popup__img">
             </div>
             <div class="popup__right">
+                <a href="#section-tours" class="popup__close">&times;</a>
                 <h2 class="heading-secondary u-margin-bottom-small">Start booking now</h2>
                 <h3 class="heading-tertiary u-margin-bottom-small">Important &ndash; Read terms, God no go shame us</h3>
                 <p class="popup__text">
