--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
         <div class="header__text-box">
             <h1 class="heading-primary">
-                <span class="heading-primary--main">Outdoor</span>
+                <span class="heading-primary--main">LAGOS</span>
                 <span class="heading-primary--sub">is where life happens</span>
             </h1>
 
@@ -349,7 +349,7 @@
 
             <picture class="footer__logo">
                 <source srcset="img/logo-green-small-1x.png 1x, img/logo-green-small-2x.png 2x" alt="small" media="(max-width: 37.5em)">
-                <img srcset="img/logo-green-1x.png 1x, img/logo-green-2x 2x" alt="full logo" alt="big" src="img/logo-green-2x.png">
+                <img srcset="img/logo-green-1x.png 1x, img/logo-green-2x.png 2x" alt="full logo" alt="big" src="img/logo-green-2x.png">
             </picture>
 
             <!-- <img srcset="img/logo-green-1x.png 1x, img/logo-green-2x 2x" alt="full logo" class="footer__logo"> -->
